# sigil

./: .env.example  .gitignore  .loa-version.json  .loa.config.yaml  .sigil-version.json  .sigilrc.yaml  .trufflehog.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CRAFT.md  INSTALLATION.md  MIGRATION-V3.md  MIGRATION-v4.md  PACK-SUBMISSION.md  PROCESS.md  README.md  SECURITY-AUDIT-REPORT.md  VERSION.json  VERSION.schema.json  VERSIONING.md  manifest.json  pnpm-lock.yaml  tsconfig.json
.ck/: AGENTS.md.ck  CLAUDE.md.ck  LICENSE.md.ck  README.md.ck  VERSION.ck  manifest.json
.ck/loa-grimoire/: NOTES.md.ck  consistency-report.md.ck  drift-report.md.ck  prd.md.ck  sdd.md.ck  sprint.md.ck
.claude/: checksums.json
.claude/agents/: context-engineering-expert.md  devops-crypto-architect.md  paranoid-auditor.md  senior-tech-lead-reviewer.md  sigil-craft.yaml  sprint-planner.md  sprint-task-implementer.md
.claude/commands/: animate.md  approve.md  audit.md  behavior.md  canonize.md  codify.md  consult.md  craft-examples.md  craft.md  enhance.md  envision.md  garden.md  glyph.md  graduate.md  greenlight.md  implement.md  inherit.md  map.md  material.md  mount.md  observe.md  plan-and-analyze.md  prove.md  sandbox.md  sigil-setup.md  snapshot.md  style.md  surface.md  sync.md  taste-synthesize.md  test-flow.md  translate-ride.md  tune.md  understand.md  update-loa.md  validate.md  ward-all.md  ward.md  zone.md
.claude/deprecated/: DEPRECATED.md
.claude/docs/: rune-install.md  rune-overview.md  skill-authoring.md
.claude/hooks/: audit-sprint-hook.md  implement-hook.md  review-sprint-hook.md  sprint-plan-hook.md
.claude/protocols/: beads-integration.md  jit-retrieval.md
.claude/references/: README.md
.claude/rules/: 00-sigil-core.md  01-sigil-physics.md  02-sigil-detection.md  03-sigil-patterns.md  04-sigil-protected.md  06-sigil-taste.md  07-sigil-material.md  17-semantic-search.md  18-sigil-complexity.md  19-sigil-data-physics.md  20-sigil-web3-flows.md  21-sigil-ui-copy.md  22-sigil-anchor-lens.md  23-sigil-hud.md  24-sigil-agentation.md  index.yaml  rlm-core-summary.md  sigil-examples.md  sigil-physics.md
.claude/schemas/: canon-of-flaws.schema.json  consultation-config.schema.json  decision.schema.json  immutable-values.schema.json  lenses.schema.json  proving-config.schema.json  proving-record.schema.json  sigilrc.schema.json
.claude/scripts/: agent-browser-api.sh  analytics.sh  check-agent-browser.sh  check-beads.sh  check-decision.sh  check-flaw.sh  check-prerequisites.sh  check-sync-declarations.sh  constructs-install.sh  constructs-lib.sh  context-check.sh  context-manager.sh  detect-zone.sh  generate-claude-md.sh  get-lens.sh  get-monitors.sh  get-zone.sh  git-safety.sh  ledger-lib.sh  license-validator.sh  mcp-registry.sh  mount-rune.sh  mount-sigil.sh  parse-rules.sh  preflight.sh  run-mode-ice.sh  sigil-detect-zone.sh  sigil-diff.sh  sigil-search.sh  sigil-tensions.sh  sigil-validate.sh  sigil-workbench.sh  skills-adapter.sh  test-helpers.sh  test-integration.sh  test-schemas.sh  update.sh  validate-sprint-id.sh  validate-sync-strategy.sh
.claude/templates/: NOTES.md.template  hypothesis-block.md  moodboard.md  notes-design-physics.md  rules.md  (+2 more)
.github/: BRANCH_PROTECTION.md  RELEASE_TEMPLATE.md
.obsidian/: workspace.json
.run/: auditor-sprint-feedback.md  circuit-breaker.json  engineer-feedback.md  state.json
.sigil/: survival-stats.json
anchor-rust/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
anchor-rust/anchor/: Cargo.toml  README.md
anchor-rust/anchor/data/: vocabulary.yaml  zones.yaml
anchor-rust/anchor/src/: error.rs  io.rs  lib.rs  main.rs
anchor-rust/anchor/src/commands/: check_source.rs  mod.rs  publish.rs  state.rs  validate.rs
anchor-rust/anchor/src/types/: exit_code.rs  mod.rs  request.rs  response.rs  vocabulary.rs  zone.rs
anchor-rust/anchor/tests/: integration_test.rs
anchor-rust/crates/anchor-cli/: Cargo.toml
anchor-rust/crates/anchor-cli/src/: main.rs
anchor-rust/crates/anchor-core/: Cargo.toml
anchor-rust/crates/anchor-core/benches/: benchmarks.rs
anchor-rust/crates/anchor-core/src/: error.rs  lib.rs
anchor-rust/crates/anchor-core/src/graph/: mod.rs  task.rs
anchor-rust/crates/anchor-core/src/lifecycle/: checkpoint_manager.rs  fork_manager.rs  mod.rs  session_manager.rs  snapshot_manager.rs
anchor-rust/crates/anchor-core/src/rpc/: client.rs  methods.rs  mod.rs
anchor-rust/crates/anchor-core/src/types/: checkpoint.rs  fork.rs  mod.rs  network.rs  physics.rs  session.rs  snapshot.rs  task.rs  zone.rs
anchor-rust/crates/anchor-core/src/warden/: adversarial.rs  grounding.rs  mod.rs  physics.rs  vocabulary.rs
anchor-rust/crates/anchor-core/tests/: integration_tests.rs
anchor-rust/lens/: Cargo.toml  README.md
anchor-rust/lens/data/: constraints.yaml
anchor-rust/lens/src/: error.rs  io.rs  lib.rs  main.rs
anchor-rust/lens/src/cel/: mod.rs
anchor-rust/lens/src/commands/: lint.rs  mod.rs  verify.rs
anchor-rust/lens/src/correction/: mod.rs
anchor-rust/lens/src/heuristics/: mod.rs
anchor-rust/lens/src/parser/: mod.rs
anchor-rust/lens/src/types/: constraint.rs  constraint_result.rs  mod.rs  physics.rs  request.rs  response.rs
anchor-rust/lens/tests/: integration.rs
anchor-rust/sigil-ipc/: Cargo.toml
anchor-rust/sigil-ipc/src/: error.rs  lib.rs
anchor-rust/tests/: e2e_workflow.sh
docs/: COMMANDS.md  COMPATIBILITY.md  INSTALLATION.md  MIGRATION.md  TROUBLESHOOTING.md  naming-universe-loa-research.md
examples/: README.md
grimoires/: README.md
loa-grimoire/: NOTES.md  drift-report.md  governance-report.md  prd.md  sdd.md  sprint.md  trajectory-audit.md
scripts/: install-cli.sh  migrate-v7.7.sh  mount-sigil.sh  preflight-sigil.sh  update-sigil.sh  verify-builds.mjs  verify-sigil.sh
sigil-mark/: MIGRATION.md  README.md  SECURITY-AUDIT-REPORT.md  VALIDATION.md  index.ts  package-lock.json  package.json  vitest.config.ts
sigil-workbench/: index.html  package.json  tailwind.config.js  vite.config.ts
src/: .sigilrc.yaml
(+1093 files in other folders)
