[workspace]
members = ["crates/anchor-core", "crates/anchor-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/0xHoneyJar/sigil"
authors = ["The Honey Jar <team@thehoneyjar.xyz>"]

[workspace.dependencies]
# Async
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# HTTP
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Graph
petgraph = "0.6"

# Parsing
regex = "1.10"
pulldown-cmark = "0.9"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
