[package]
name = "sigil-anchor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Ground truth enforcement for blockchain state - Loa Constructs Triad"

[[bin]]
name = "anchor"
path = "src/main.rs"

[lib]
name = "sigil_anchor_core"
path = "src/lib.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
fs2.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Shared IPC utilities
sigil-ipc = { path = "../sigil-ipc" }

[dev-dependencies]
tempfile = "3"
