[package]
name = "sigil-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared IPC utilities for Sigil CLI tools - file-based request/response communication"

[lib]
name = "sigil_ipc"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
fs2 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
